# Juster

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTEXT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  build.sh  core.h  index.html  styles.css
.github/: ISSUE_TEMPLATE.md
docs/: DESIGN.md
include/juster/: Application.h  Renderer.h  Window.h
include/juster/Animation/: AnimationTools.h  Project.h  Timeline.h
include/juster/UI/: MainMenuUI.h  UIManager.h
src/: Application.cpp  Juster  Renderer.cpp  Window.cpp  main.cpp
src/Animation/: AnimationTools.cpp  Project.cpp  Timeline.cpp
src/UI/: MainMenuUI.cpp  UIManager.cpp
